# OMENRGB-LNX

./: com.jesusxd88.OMENRGB_LNX.json  meson.build
data/: com.jesusxd88.OMENRGB_LNX.appdata.xml.in  com.jesusxd88.OMENRGB_LNX.desktop.in  com.jesusxd88.OMENRGB_LNX.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  omenrgb_lnx-application.c  omenrgb_lnx-application.h  omenrgb_lnx-window.c  omenrgb_lnx-window.h  omenrgb_lnx-window.ui  omenrgb_lnx.gresource.xml
